BugFix: reduce the magin left for card-wraper.

--- a/smartcoin/css/smartcoin-prestashop.css
+++ b/smartcoin/css/smartcoin-prestashop.css
@@ -214,5 +214,5 @@ select.smartcoin-select {
 
 div.smartcoin-card-wrapper {
 	float: left;
-	margin: 30px 0 0 40px;
+	margin: 30px 0 0 20px;
 }
